--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 <!-- <link rel="stylesheet" type="text/css" href="style.css">   -->
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <style>
-.carousel-item img {
-  display: block;
-  margin: 0 auto;
-  width: 75px;
-  height: 75px;
-  margin-top:50px;
-}
-.carousel-inner {
-  width: 1350px;
-  margin: 0 auto;
-  height:200px;
-  border-bottom:1px solid black;
-  border-radius:30px;
-}
-.carousel-indicators {
-  justify-content: center;
-}
-.carousel-indicators li {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  margin: 0 5px;
-}
-.carousel-indicators .active {
-  background-color: rgba(0, 0, 0, 0.9);
-}
+  .carousel-item img {
+    display: block;
+    margin: 0 auto;
+    width: 75px;
+    height: 75px;
+    margin-top:50px;
+  }
+  .carousel-inner {
+    width: 1350px;
+    margin: 0 auto;
+    height:200px;
+    border-bottom:1px solid black;
+    border-radius:30px;
+  }
+  .carousel-indicators {
+    justify-content: center;
+  }
+  .carousel-indicators li {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+  }
+  .carousel-indicators .active {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
 @media (max-width: 768px) {
       .carousel-inner {
         width: 100%;
@@ -46,17 +46,21 @@
         height: auto;
       }
     }
-.navbar-light .navbar-nav .nav-link {
-    color: green;
-  }
 
-  /* Hover and click color (cyan) */
-  .navbar-light .navbar-nav .nav-link:hover,
-  .navbar-light .navbar-nav .nav-link:focus,
-  .navbar-light .navbar-nav .nav-link:active {
-    color:green;
-  }
-
+    .navbar-light .navbar-nav .nav-link {
+      color: green;
+    }
+  
+    /* Hover and click color (cyan) */
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:active {
+      color:green;
+    }
+.navbar{
+    background-color:#6a6e67;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 2);
+  } 
 </style>
 </head>
 <body>
@@ -70,7 +74,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#content">Home</a>
       </li>
       <li class="nav-item">
