--- a/quiz.html
+++ b/quiz.html
@@ -2,10 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=hello world, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+<!-- <link rel="stylesheet" type="text/css" href="style.css">   -->
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="index.css"> 
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <title>Weekend-Quiz</title>
+    
+<style>
+  .navbar-light .navbar-nav .nav-link {
+    color: green;
+  }
+
+  /* Hover and click color (cyan) */
+  .navbar-light .navbar-nav .nav-link:hover,
+  .navbar-light .navbar-nav .nav-link:focus,
+  .navbar-light .navbar-nav .nav-link:active {
+    color:green;
+  }
+</style>  
 </head>
 <body>
+<!--navbaar satrt-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src="data-science.png" id="image" alt="Cse club" width="40" height="40"> 
+          <label class="display-5 my-0" id="he">Cse Club</label>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon text-dark"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#content">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quiz.html">weekend-Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="courses.html">courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hackathons.html">Hakathons</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+<!--end section of nav bar-->
     
+<!---content of the cards-->
+<div class="conatiner-fluid">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <a href=""><img src="advantage.png" class="card-img-top" alt="card-1" ></a>
+          <div class="card-body">
+            <h5 class="card-title">E-1</h5>
+            <p class="card-text">Participate in our hackathons and engage in energetic interactions with fellow enthusiasts. Win exciting prizes!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="brainstorm.png" class="card-img-top" alt="card-1" >
+          <div class="card-body">
+            <h5 class="card-title">E-2</h5>
+            <p class="card-text">Share your news and raise your voice with Chronicle. Upload the news you want to publish and contribute to our platform.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <a href=""><img src="advantage.png" class="card-img-top" alt="card-1" ></a>
+          <div class="card-body">
+            <h5 class="card-title">E-3</h5>
+            <p class="card-text">Participate in our hackathons and engage in energetic interactions with fellow enthusiasts. Win exciting prizes!</p>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+<footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Weekend-Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">hackathons</a>
+            </li>
+          </ul>
+      </div>
+      <div class="col-md-4">
+      <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Ideas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+      </ul>
+      </div>
+      <div class="col-md-4">
+      <div class="made-with-love">
+            <p>Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> by Cse Club</p>
+          </div>
+          <div class="admin-email">
+            <i class="fas fa-envelope"></i>
+            <span>admin.cseclub.sdcac@.com</span>
+            <br>
+            <i class="fas fa-phone"></i>
+            <span>I3-F57A</span>
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
+      </footer>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
 </body>
 </html>
