added quiz page

--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-
+<link rel="icon" href="data-science.png">
     <title>Weekend-Quiz</title>
     
 <style>
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#content">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quiz.html">weekend-Quiz</a>
@@ -61,28 +61,28 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <a href=""><img src="advantage.png" class="card-img-top" alt="card-1" ></a>
+          <a href=""><img src="Student.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-1</h5>
-            <p class="card-text">Participate in our hackathons and engage in energetic interactions with fellow enthusiasts. Win exciting prizes!</p>
+            <p class="card-text">Participate in Quiz Be a Icon of E-1</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="brainstorm.png" class="card-img-top" alt="card-1" >
+          <img src="student (1).png" class="card-img-top" alt="card-1" >
           <div class="card-body">
             <h5 class="card-title">E-2</h5>
-            <p class="card-text">Share your news and raise your voice with Chronicle. Upload the news you want to publish and contribute to our platform.</p>
+            <p class="card-text">Participate in Quiz Be a Icon of E-2.</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <a href=""><img src="advantage.png" class="card-img-top" alt="card-1" ></a>
+          <a href=""><img src="graduate.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-3</h5>
-            <p class="card-text">Participate in our hackathons and engage in energetic interactions with fellow enthusiasts. Win exciting prizes!</p>
+            <p class="card-text">Participate in Quiz Be a Icon of E-3</p>
           </div>
         </div>
       </div>
