--- a/quiz.html
+++ b/quiz.html
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <a href=""><img src="graduate.png" class="card-img-top" alt="card-1" ></a>
+          <a href=""><img src="graduated.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-3</h5>
             <p class="card-text">Participate in Quiz Be a Icon of E-3</p>
