--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="icon" href="data-science.png">
+<title>SDCAC-cseClube</title>
 <style>
   .carousel-item img {
     display: block;
