--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <a href="www.google.com"><img src="Student.png" class="card-img-top" alt="card-1" ></a>
+          <a href="https://forms.gle/b5fYFtG5xtqCi4nT9"><img src="Student.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-1</h5>
             <p class="card-text">Participate in Quiz Be a Icon of E-1</p>
