--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <a href="https://forms.gle/b5fYFtG5xtqCi4nT9"><img src="Student.png" class="card-img-top" alt="card-1" ></a>
+          <a href=""><img src="Student.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-1</h5>
             <p class="card-text">Participate in Quiz Be a Icon of E-1</p>
@@ -70,7 +70,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="student (1).png" class="card-img-top" alt="card-1" >
+          <a href="https://forms.gle/b5fYFtG5xtqCi4nT9""><img src="student (1).png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-2</h5>
             <p class="card-text">Participate in Quiz Be a Icon of E-2.</p>
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <a href=""><img src="graduated.png" class="card-img-top" alt="card-1" ></a>
+          <a href="https://forms.gle/Smz9EFupU6rVN29u8"><img src="graduated.png" class="card-img-top" alt="card-1" ></a>
           <div class="card-body">
             <h5 class="card-title">E-3</h5>
             <p class="card-text">Participate in Quiz Be a Icon of E-3</p>
